inter/Tests/Invalid/mistype.intert
packagetype _plain
packagetype _code

package main _plain
	kind K_number int32768
